--- a/home.css
+++ b/home.css
@@ -1,3 +1,4 @@
+
 ul {
     list-style-type: none;
     margin: 0;
@@ -5,18 +6,26 @@ ul {
     background-color:#073b4c;
    
 }
-a {
+
+.link{
     color: white;
     width: 60px;
 }
+
 li{
     display: inline;
+    padding: 5px;
 }
+
 h1 { font-size: 350%;
 
 }
+
 #store {
     padding: 32px 40px;
     font-size: 24px;
-
+}
+#img2{
+    position: absolute;
+    right: 0px;
 }
