--- a/store.css
+++ b/store.css
@@ -35,3 +35,23 @@ td{
 tr:nth-child(even) {
     background-color: #06d6a0;
 }
+li{
+    font-size: 200%;
+}
+.button {
+    background-color:#ffd166 ;
+    border: none;
+    color: black;
+    padding: 32px 40px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 24px;
+    border-radius: 8px;
+}
+.button:hover {background-color: antiquewhite;}
+
+.button:active {
+  background-color: antiquewhite;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);}
