--- a/store.css
+++ b/store.css
@@ -14,6 +14,7 @@ body{
 }
 .navbar-default .navbar-nav>li>a {
     color: white;
+    font-size: 200%;
 }
 table {
     font-family: arial, sans-serif;
